Fix label alignment on firefox

--- a/ui/client-react/src/components/fields/checkbox.scss
+++ b/ui/client-react/src/components/fields/checkbox.scss
@@ -5,6 +5,8 @@ $checkbox-disabled-opacity: .4;
 $checkbox-size: 16px;
 $checkbox-size-mobile: 24px;
 
+$input-border-focus-color: rgba(54, 94, 191, 0.25);
+
 @mixin unchecked-checkbox {
     background-color: $checkbox-background-unchecked-color;
     border: 2px solid $checkbox-border-color;
@@ -56,7 +58,7 @@ $checkbox-size-mobile: 24px;
         }
 
         &:focus + label:after, + label:focus:after, label:focus:after {
-            box-shadow: 0 0 4px 1px $input-text-focus-border-color;
+            box-shadow: 0px 0px 0px 2px $input-border-focus-color;
         }
 
         // Unchecked style
@@ -158,7 +160,7 @@ $checkbox-size-mobile: 24px;
         }
 
         .label {
-            display: inline-flex;
+            display: inline;
             border: 2px solid transparent;
         }
 
